# programming_quiz

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: config.py  config.yml  container.py  main.py  storage.py  utils.py
app/api/: api.py
app/api/quizz/endpoints/: questions.py  quizz.py
app/api/user/endpoints/: registry.py  token.py  user.py
app/api/v1/quizz/: schemas.py
app/db/: database.py  redis.py
app/db/migrations/: env.py
app/db/migrations/versions/: 14787a770012_init.py  aecdf8fc5e61_init.py  c12826c797b5_init.py  ce488fe1091e_init.py
app/db/models/: __init__.py  quizz.py  user.py
app/infrastructure/db/: base.py
app/infrastructure/db/models/: __init__.py  base.py  quizz.py
app/infrastructure/repositories/: base.py  quizz.py
app/migrations/: env.py
app/migrations/versions/: 0f00516da28e_init.py  b0ee318defbb_init.py
app/schemas/: quizz.py  token.py  user.py
migrations/: env.py
migrations/versions/: 81e4effa7282_initial_models.py  90bf530f2088_init_question_models.py  b8f5c2207b11_init_question_models.py  caa950285146_initial_models.py
