[tool.poetry]
name = "programming-quiz"
version = "0.1.0"
description = "API service about knowledge preparing"
authors = ["German Gritsenko"]
readme = "README.md"
packages = [{include = "programming_quiz"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.22"}
uvicorn = "^0.23.2"
alembic = "^1.12.0"
dependency-injector = "^4.41.0"
asyncpg = "^0.28.0"
ruff = "^0.1.1"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
